Mit Colab erstellt

--- a/D&D_MVP.ipynb
+++ b/D&D_MVP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONm55RYxXGdCe1sbHw0imJ",
+      "authorship_tag": "ABX9TyN5NeDdE7oIu34g/VAawpZ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,9 +110,7 @@
         "      \"Name\": name,\n",
         "      \"Klasse\": klasse,\n",
         "      \"Spezies\": spezies,\n",
-        "      \"Geschick\": random.randint(5, 20),\n",
-        "      \"Intelligenz\": random.randint(5, 20),\n",
-        "      \"Stärke\": random.randint(5, 20),\n",
+        "      \"Angriff\": random.randint(5, 20),\n",
         "      \"HP\": 20,\n",
         "      \"Inventar\": random.choices(inventory_list, k=2)\n",
         "  }\n",
@@ -162,6 +160,14 @@
       "source": [
         "## 💀 2. Gegnererstellung\n",
         "- Dictionary\n",
+        "```python\n",
+        "enemy_list = [\n",
+        "  {\"Name\": \"stinkender Ork\", \"Angriff\": random(5,15), \"HP\": random(5,20)},\n",
+        "  {\"Name\": \"windige Schlange\", \"Angriff\": random(5,15), \"HP\": random(5,20)},\n",
+        "  {\"Name\": \"runzeliges Warzenschwein\", \"Angriff\": random(5,15), \"HP\": random(5,20)},\n",
+        "  {\"Name\": \"winziger Goblin\", \"Angriff\": random(5,15), \"HP\": random(5,20)}\n",
+        "   ]\n",
+        "```\n",
         "- Liste an Gegnern\n",
         "- Funktion mit zufälliger Wahl an Gegnern"
       ],
@@ -171,12 +177,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "enemy_list = [\n",
+        "  {\"Name\": \"🤢👹 stinkender Ork\", \"Angriff\": random.randint(5,15), \"HP\": random.randint(5,20)},\n",
+        "  {\"Name\": \"🐍💨 windige Schlange\", \"Angriff\": random.randint(5,15), \"HP\": random.randint(5,20)},\n",
+        "  {\"Name\": \"🐗🧐 runzeliges Warzenschwein\", \"Angriff\": random.randint(5,15), \"HP\": random.randint(5,20)},\n",
+        "  {\"Name\": \"🧌🔍 winziger Goblin\", \"Angriff\": random.randint(5,15), \"HP\": random.randint(5,20)}\n",
+        "   ]\n",
+        "\n",
+        "def create_enemy():\n",
+        "  enemy = random.choice(enemy_list).copy()\n",
+        "  return enemy\n",
+        "\n",
+        "enemy = create_enemy()\n",
+        "for key, value in enemy.items():\n",
+        "  print(f\"{key}: {value}\")"
+      ],
       "metadata": {
-        "id": "e_aWWYZmYskN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e_aWWYZmYskN",
+        "outputId": "a5a19379-0f43-4d91-c3fa-baed952eef7e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name: 🤢👹 stinkender Ork\n",
+            "Angriff: 12\n",
+            "HP: 20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
