Mit Colab erstellt

--- a/D&D_MVP.ipynb
+++ b/D&D_MVP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5NeDdE7oIu34g/VAawpZ4",
+      "authorship_tag": "ABX9TyP8eo47kY0yd2j7VZBl9QLg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -226,12 +226,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "def dice(sides):\n",
+        "  return random.randint(1,sides)\n",
+        "\n",
+        "seiten = 8\n",
+        "print(dice(seiten))"
+      ],
       "metadata": {
-        "id": "WSvgWbmaY0FZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WSvgWbmaY0FZ",
+        "outputId": "55e94caf-df48-4bca-8057-3201756895ee"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
