--- a/D&D_MVP.ipynb
+++ b/D&D_MVP.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8eo47kY0yd2j7VZBl9QLg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,28 +128,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FQXrKmLCYcd1",
-        "outputId": "aaf9661d-c752-439e-b174-388cbc7d75d2"
+        "outputId": "c942ad65-2734-403e-9b99-c8cb659b3e12"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "🎭 Erstelle deinen Charakter\n",
-            "Wie heißt dein Held? Helen\n",
-            "Was ist deine Klasse? Magier\n",
-            "Was ist deine Spezies? Elf\n",
+            "Wie heißt dein Held? Theo\n",
+            "Was ist deine Klasse? Krieger\n",
+            "Was ist deine Spezies? Mensch\n",
             "\n",
             "Dein Charakter:\n",
-            "Name: Helen\n",
-            "Klasse: Magier\n",
-            "Spezies: Elf\n",
-            "Geschick: 14\n",
-            "Intelligenz: 15\n",
-            "Stärke: 11\n",
+            "Name: Theo\n",
+            "Klasse: Krieger\n",
+            "Spezies: Mensch\n",
+            "Angriff: 20\n",
             "HP: 20\n",
-            "Inventar: ['🔪 Stumpfes Messer', '🍵 Schimmeliger Zaubertrank']\n"
+            "Inventar: ['🍵 Schimmeliger Zaubertrank', '🍵 Schimmeliger Zaubertrank']\n"
           ]
         }
       ]
@@ -200,17 +197,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e_aWWYZmYskN",
-        "outputId": "a5a19379-0f43-4d91-c3fa-baed952eef7e"
+        "outputId": "04a9194b-d27f-4662-9fcb-c431a817aefa"
       },
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Name: 🤢👹 stinkender Ork\n",
+            "Name: 🐍💨 windige Schlange\n",
             "Angriff: 12\n",
-            "HP: 20\n"
+            "HP: 18\n"
           ]
         }
       ]
@@ -240,15 +237,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WSvgWbmaY0FZ",
-        "outputId": "55e94caf-df48-4bca-8057-3201756895ee"
+        "outputId": "d490046c-62fc-4cda-bca2-c7f89710f7e3"
       },
-      "execution_count": 28,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n"
+            "7\n"
           ]
         }
       ]
@@ -266,12 +263,102 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "character1 = create_character()\n",
+        "\n",
+        "print(character1)\n",
+        "print(enemy1)"
+      ],
       "metadata": {
-        "id": "as-4WLP1ZRvN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NtmpUC6yGmM-",
+        "outputId": "a96cb64c-abff-4ed2-cad6-7a5b1c7320d3"
       },
-      "execution_count": null,
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🎭 Erstelle deinen Charakter\n",
+            "Wie heißt dein Held? Theo\n",
+            "Was ist deine Klasse? Krieger\n",
+            "Was ist deine Spezies? Mensch\n",
+            "{'Name': 'Theo', 'Klasse': 'Krieger', 'Spezies': 'Mensch', 'Angriff': 19, 'HP': 20, 'Inventar': ['🧪 Abgelaufener Lebenstrank', '💀 Stinkender Heiltrank']}\n",
+            "{'Name': '🤢👹 stinkender Ork', 'Angriff': 9, 'HP': -3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "enemy1 = create_enemy()"
+      ],
+      "metadata": {
+        "id": "hBwjiUyVKcJg"
+      },
+      "execution_count": 32,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def kampf(character, enemy):\n",
+        "  print(f\"Du kämpfst gegen {enemy['Name']}\")\n",
+        "\n",
+        "  while character[\"HP\"] > 0 and enemy[\"HP\"] > 0:\n",
+        "    # charakter greift an\n",
+        "    schaden = dice(6)\n",
+        "    print(f\"{character['Name']} würfelt: {schaden}\")\n",
+        "\n",
+        "    enemy[\"HP\"] -= schaden\n",
+        "    print(enemy[\"HP\"])\n",
+        "\n",
+        "    # Überprüfen ob der Gegner besiegt wurde\n",
+        "    if enemy[\"HP\"] <= 0:\n",
+        "      print(\"Du hast gewonnen\")\n",
+        "      break\n",
+        "\n",
+        "    schaden_gegner = dice(4)\n",
+        "    character[\"HP\"] -= schaden_gegner\n",
+        "    print(f\"{enemy['Name']} würfelt: {schaden}\")\n",
+        "\n",
+        "    if character[\"HP\"] <= 0:\n",
+        "      print(\"Charakter wurde besiegt!\")\n",
+        "      break\n",
+        "\n",
+        "kampf(character1, enemy1)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "as-4WLP1ZRvN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "147e598c-55bd-493a-98b5-3f0335a2b07d"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Du kämpfst gegen 🧌🔍 winziger Goblin\n",
+            "Theo würfelt: 5\n",
+            "2\n",
+            "🧌🔍 winziger Goblin würfelt: 5\n",
+            "Theo würfelt: 1\n",
+            "1\n",
+            "🧌🔍 winziger Goblin würfelt: 1\n",
+            "Theo würfelt: 2\n",
+            "-1\n",
+            "Du hast gewonnen\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
