Mit Colab erstellt

--- a/D&D_MVP.ipynb
+++ b/D&D_MVP.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyNartb8ACHUQOjPvjRN+Ep0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,26 +129,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FQXrKmLCYcd1",
-        "outputId": "c942ad65-2734-403e-9b99-c8cb659b3e12"
+        "outputId": "85113270-5f60-427c-b400-edd06429da5a"
       },
-      "execution_count": 9,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "🎭 Erstelle deinen Charakter\n",
-            "Wie heißt dein Held? Theo\n",
-            "Was ist deine Klasse? Krieger\n",
-            "Was ist deine Spezies? Mensch\n",
+            "Wie heißt dein Held? Helen\n",
+            "Was ist deine Klasse? Magier\n",
+            "Was ist deine Spezies? Elf\n",
             "\n",
             "Dein Charakter:\n",
-            "Name: Theo\n",
-            "Klasse: Krieger\n",
-            "Spezies: Mensch\n",
-            "Angriff: 20\n",
+            "Name: Helen\n",
+            "Klasse: Magier\n",
+            "Spezies: Elf\n",
+            "Angriff: 11\n",
             "HP: 20\n",
-            "Inventar: ['🍵 Schimmeliger Zaubertrank', '🍵 Schimmeliger Zaubertrank']\n"
+            "Inventar: ['🧪 Abgelaufener Lebenstrank', '🍵 Schimmeliger Zaubertrank']\n"
           ]
         }
       ]
@@ -188,8 +189,8 @@
         "  enemy = random.choice(enemy_list).copy()\n",
         "  return enemy\n",
         "\n",
-        "enemy = create_enemy()\n",
-        "for key, value in enemy.items():\n",
+        "enemy1 = create_enemy()\n",
+        "for key, value in enemy1.items():\n",
         "  print(f\"{key}: {value}\")"
       ],
       "metadata": {
@@ -197,17 +198,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e_aWWYZmYskN",
-        "outputId": "04a9194b-d27f-4662-9fcb-c431a817aefa"
+        "outputId": "5acdc257-bf46-4ee8-9547-ac36bcd44b39"
       },
-      "execution_count": 10,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Name: 🐍💨 windige Schlange\n",
-            "Angriff: 12\n",
-            "HP: 18\n"
+            "Angriff: 14\n",
+            "HP: 9\n"
           ]
         }
       ]
@@ -237,15 +238,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WSvgWbmaY0FZ",
-        "outputId": "d490046c-62fc-4cda-bca2-c7f89710f7e3"
+        "outputId": "02e474e5-75ad-420f-dea5-a362add2fbf7"
       },
-      "execution_count": 11,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "7\n"
+            "3\n"
           ]
         }
       ]
@@ -264,58 +265,21 @@
     {
       "cell_type": "code",
       "source": [
-        "character1 = create_character()\n",
-        "\n",
-        "print(character1)\n",
-        "print(enemy1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NtmpUC6yGmM-",
-        "outputId": "a96cb64c-abff-4ed2-cad6-7a5b1c7320d3"
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "🎭 Erstelle deinen Charakter\n",
-            "Wie heißt dein Held? Theo\n",
-            "Was ist deine Klasse? Krieger\n",
-            "Was ist deine Spezies? Mensch\n",
-            "{'Name': 'Theo', 'Klasse': 'Krieger', 'Spezies': 'Mensch', 'Angriff': 19, 'HP': 20, 'Inventar': ['🧪 Abgelaufener Lebenstrank', '💀 Stinkender Heiltrank']}\n",
-            "{'Name': '🤢👹 stinkender Ork', 'Angriff': 9, 'HP': -3}\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "enemy1 = create_enemy()"
-      ],
-      "metadata": {
-        "id": "hBwjiUyVKcJg"
-      },
-      "execution_count": 32,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "#player2 = create_character()\n",
+        "#enemy2 = create_enemy()\n",
+        "#print(enemy2)\n",
         "def kampf(character, enemy):\n",
         "  print(f\"Du kämpfst gegen {enemy['Name']}\")\n",
         "\n",
         "  while character[\"HP\"] > 0 and enemy[\"HP\"] > 0:\n",
         "    # charakter greift an\n",
+        "    input(\"Drücke ENTER zum würfelnss\")\n",
         "    schaden = dice(6)\n",
         "    print(f\"{character['Name']} würfelt: {schaden}\")\n",
+        "    print(f\"{enemy['Name']} nimmt {schaden} Schaden\")\n",
         "\n",
         "    enemy[\"HP\"] -= schaden\n",
-        "    print(enemy[\"HP\"])\n",
+        "    print(f\"{enemy['Name']} hat nun {enemy['HP']} HP\")\n",
         "\n",
         "    # Überprüfen ob der Gegner besiegt wurde\n",
         "    if enemy[\"HP\"] <= 0:\n",
@@ -324,41 +288,22 @@
         "\n",
         "    schaden_gegner = dice(4)\n",
         "    character[\"HP\"] -= schaden_gegner\n",
+        "    print(f\"Dein {character['Name']} hat nun {character['HP']} HP\")\n",
         "    print(f\"{enemy['Name']} würfelt: {schaden}\")\n",
+        "    print(f\"{character['Name']} nimmt {schaden} Schaden\")\n",
+        "    print(\"-------------------\")\n",
         "\n",
         "    if character[\"HP\"] <= 0:\n",
         "      print(\"Charakter wurde besiegt!\")\n",
         "      break\n",
         "\n",
-        "kampf(character1, enemy1)\n",
-        "\n"
+        "##kampf(player, enemy2)\n"
       ],
       "metadata": {
-        "id": "as-4WLP1ZRvN",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "147e598c-55bd-493a-98b5-3f0335a2b07d"
+        "id": "as-4WLP1ZRvN"
       },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Du kämpfst gegen 🧌🔍 winziger Goblin\n",
-            "Theo würfelt: 5\n",
-            "2\n",
-            "🧌🔍 winziger Goblin würfelt: 5\n",
-            "Theo würfelt: 1\n",
-            "1\n",
-            "🧌🔍 winziger Goblin würfelt: 1\n",
-            "Theo würfelt: 2\n",
-            "-1\n",
-            "Du hast gewonnen\n"
-          ]
-        }
-      ]
+      "execution_count": 49,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -402,26 +347,76 @@
       "cell_type": "markdown",
       "source": [
         "## 7. Eine Quest mit Entscheidungen\n",
-        "```python\n",
-        "print(\"\\nDu stehst vor einer dunklen Höhle. Was tust du?\")\n",
-        "print(\"1️⃣ Gehe hinein.\")\n",
-        "print(\"2️⃣ Laufe weiter.\")\n",
-        "\n",
-        "wahl = input(\"Wähle 1 oder 2: \")\n",
-        "\n",
-        "if wahl == \"1\":\n",
-        "    print(\"Du betrittst die Höhle\")\n",
-        "    // Random Choice aus dem Ereignis-Dict\n",
-        "elif wahl == \"2\":\n",
-        "    print(\"Du gehst weiter und findest eine sichere Stelle zum Ausruhen. 🏕️\")\n",
-        "    // Random Choice aus dem Eregnis-Dict\n",
-        "else:\n",
-        "    print(\"Du hast nichts getan und bist stehen geblieben. 😴\")\n",
-        "```\n"
+        "\n"
       ],
       "metadata": {
         "id": "7bTNxlOjaftG"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "print(\"GAME BEGINS\")\n",
+        "print(\"Wähle zunächst einen Charakter: \")\n",
+        "my_player = create_character()\n",
+        "print(\"Nun beginnt deine Reise...\")\n",
+        "print(\"\\nDu stehst vor einer dunklen Höhle. Was tust du?\")\n",
+        "print(\"1️⃣ Gehe hinein.\")\n",
+        "print(\"2️⃣ Laufe weiter.\")\n",
+        "wahl = input(\"Wähle 1,2 oder 3: \")\n",
+        "if wahl == \"1\":\n",
+        "    print(\"Du betrittst die Höhle\")\n",
+        "    first_enemy = create_enemy()\n",
+        "    print(\"Huch... Ein Gegner erscheint\")\n",
+        "    print(f\"{first_enemy['Name']} fordert dich zum Kampf auf\")\n",
+        "    kampf(my_player, first_enemy)\n",
+        "elif wahl == \"2\":\n",
+        "    print(\"Du gehst weiter und findest eine sichere Stelle zum Ausruhen. 🏕️\")\n",
+        "    # Inventar zur Liste hinzufügen\n",
+        "    new_inventory = random.choice(inventory_list)\n",
+        "    print(f\"Oha, hier liegt ein {new_inventory} rum. Heb es doch auf!\")\n",
+        "    input(\"Drücke ENTER, um das aufzuheben\")\n",
+        "    my_player['Inventar'].append(new_inventory)\n",
+        "    print(f\"Cool, dein Inventar besteht nun aus: {my_player['Inventar']}\")\n",
+        "elif wahl == \"3\":\n",
+        "    # jetzt passiert noch was anderes\n",
+        "    print(\"3. Wahl\")\n",
+        "else:\n",
+        "    print(\"Du hast nichts getan und bist stehen geblieben. 😴\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e8Afro-wPp3C",
+        "outputId": "fb69aa26-4ae1-4c69-da26-1ca62ba66fff"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GAME BEGINS\n",
+            "Wähle zunächst einen Charakter: \n",
+            "🎭 Erstelle deinen Charakter\n",
+            "Wie heißt dein Held? as\n",
+            "Was ist deine Klasse? asd\n",
+            "Was ist deine Spezies? asd\n",
+            "Nun beginnt deine Reise...\n",
+            "\n",
+            "Du stehst vor einer dunklen Höhle. Was tust du?\n",
+            "1️⃣ Gehe hinein.\n",
+            "2️⃣ Laufe weiter.\n",
+            "Wähle 1 oder 2: 2\n",
+            "Du gehst weiter und findest eine sichere Stelle zum Ausruhen. 🏕️\n",
+            "Oha, hier liegt ein 🔪 Stumpfes Messer rum. Heb es doch auf!\n",
+            "Drücke ENTER, um das aufzuheben\n",
+            "Cool, dein Inventar besteht nun aus: ['🔪 Stumpfes Messer', '⚔️ Rostiges Eisenschwert', '🔪 Stumpfes Messer']\n"
+          ]
+        }
+      ]
     }
   ]
 }
