Mit Colab erstellt

--- a/D&D_MVP.ipynb
+++ b/D&D_MVP.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNartb8ACHUQOjPvjRN+Ep0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,26 +128,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FQXrKmLCYcd1",
-        "outputId": "85113270-5f60-427c-b400-edd06429da5a"
+        "outputId": "e3c2b10e-cafb-4f55-a43b-d690a928004f"
       },
-      "execution_count": 42,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "🎭 Erstelle deinen Charakter\n",
-            "Wie heißt dein Held? Helen\n",
-            "Was ist deine Klasse? Magier\n",
-            "Was ist deine Spezies? Elf\n",
+            "Wie heißt dein Held? Najat\n",
+            "Was ist deine Klasse? Zauber\n",
+            "Was ist deine Spezies? Zauber Familie\n",
             "\n",
             "Dein Charakter:\n",
-            "Name: Helen\n",
-            "Klasse: Magier\n",
-            "Spezies: Elf\n",
-            "Angriff: 11\n",
+            "Name: Najat\n",
+            "Klasse: Zauber\n",
+            "Spezies: Zauber Familie\n",
+            "Angriff: 15\n",
             "HP: 20\n",
-            "Inventar: ['🧪 Abgelaufener Lebenstrank', '🍵 Schimmeliger Zaubertrank']\n"
+            "Inventar: ['🧪 Abgelaufener Lebenstrank', '⚔️ Rostiges Eisenschwert']\n"
           ]
         }
       ]
@@ -200,7 +199,7 @@
         "id": "e_aWWYZmYskN",
         "outputId": "5acdc257-bf46-4ee8-9547-ac36bcd44b39"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +239,7 @@
         "id": "WSvgWbmaY0FZ",
         "outputId": "02e474e5-75ad-420f-dea5-a362add2fbf7"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +301,7 @@
       "metadata": {
         "id": "as-4WLP1ZRvN"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,6 +363,7 @@
         "print(\"\\nDu stehst vor einer dunklen Höhle. Was tust du?\")\n",
         "print(\"1️⃣ Gehe hinein.\")\n",
         "print(\"2️⃣ Laufe weiter.\")\n",
+        "print(\"3️⃣Rufe nach Hilfe.\")\n",
         "wahl = input(\"Wähle 1,2 oder 3: \")\n",
         "if wahl == \"1\":\n",
         "    print(\"Du betrittst die Höhle\")\n",
@@ -381,18 +381,81 @@
         "    print(f\"Cool, dein Inventar besteht nun aus: {my_player['Inventar']}\")\n",
         "elif wahl == \"3\":\n",
         "    # jetzt passiert noch was anderes\n",
-        "    print(\"3. Wahl\")\n",
+        "    print(\"Du rufst nach Hilfe.\")\n",
+        "    print(\"Nach einer kurzen Weile erscheint ein weiser alter Mann.\")\n",
+        "    print(\"Er bietet dir an, dir einen wertvollen Rat zu geben.\")\n",
+        "    print(\"Was möchtest du tun?\")\n",
+        "    print(\"1️⃣ Höre auf seinen Rat.\")\n",
+        "    print(\"2️⃣ Ignoriere ihn und gehe weiter.\")\n",
+        "    print(\"3️⃣ Nimm ihn als Komplizen.\")\n",
+        "\n",
+        "    rat_wahl = input(\"Wähle 1, 2 oder 3:\")\n",
+        "\n",
+        "if rat_wahl == \"1\":\n",
+        "        print(\"Der alte Mann sagt: 'Sei vorsichtig, die Dunkelheit birgt viele Gefahren.'\")\n",
+        "        print(\"Du fühlst dich ermutigt und bereit für das Abenteuer!\")\n",
+        "elif rat_wahl == \"2\":\n",
+        "        print(\"Du ignorierst den alten Mann und gehst weiter.\")\n",
+        "        print(\"Vielleicht war das nicht die beste Entscheidung...\")\n",
+        "\n",
+        "elif rat_wahl == \"3\":\n",
+        "        print(\"Der alte Mann sagt: Nimm mich als Komplizen und ich werde dir weiter helfen.\")\n",
+        "        print(\"Du nimmst seinen Vorschlag an und kommst so sicher ans Ziel.\")\n",
+        "\n",
+        "\n",
         "else:\n",
-        "    print(\"Du hast nichts getan und bist stehen geblieben. 😴\")"
+        "        print(\"Der alte Mann schaut dich verwirrt an und geht weg.\")\n",
+        "\n",
+        "\n",
+        "def abenteuer():\n",
+        "    print(\"Nachdem du den alten Mann als Komplizen angenommen hast, spürst du sofort eine Welle des Vertrauens.\")\n",
+        "    print(\"Er lächelt weise und führt dich durch einen geheimen Pfad, der von dichten Bäumen gesäumt ist.\")\n",
+        "    print(\"„Dieser Weg ist sicher, aber wir müssen leise sein“, flüstert er.\")\n",
+        "\n",
+        "    print(\"\\nWährend ihr geht, erzählt er dir von den Herausforderungen, die vor euch liegen.\")\n",
+        "    print(\"„Es gibt Wächter, die diesen Ort beschützen. Sie sind nicht leicht zu überlisten, aber ich kenne einige Tricks“, sagt er und zwinkert dir zu.\")\n",
+        "\n",
+        "    print(\"\\nPlötzlich hört ihr ein Geräusch. Der alte Mann zieht dich hinter einen Baum und sagt:\")\n",
+        "    print(\"„Bleib ruhig. Wir müssen abwarten, bis die Wächter vorbeigehen.“\")\n",
+        "    print(\"Du spürst das Adrenalin in deinen Adern, während ihr beide in der Dunkelheit lauert.\")\n",
+        "\n",
+        "    print(\"\\nNachdem die Wächter vorbeigezogen sind, führt dich der alte Mann weiter.\")\n",
+        "    print(\"„Wir sind fast da“, sagt er. „Aber bevor wir das Ziel erreichen, musst du eine Entscheidung treffen.\")\n",
+        "    print(\"Es gibt zwei Wege: Der eine führt direkt zum Schatz, aber er ist voller Gefahren.\")\n",
+        "    print(\"Der andere ist sicherer, aber er könnte länger dauern.“\")\n",
+        "\n",
+        "    entscheidung = input(\"Wähle deinen Weg (1 für den riskanten Weg, 2 für den sicheren Weg): \")\n",
+        "\n",
+        "    if entscheidung == \"1\":\n",
+        "        print(\"\\nDu hast den riskanten Weg gewählt!\")\n",
+        "        print(\"Du und der alte Mann schleicht euch vorsichtig voran, aber plötzlich tauchen die Wächter auf!\")\n",
+        "        print(\"Ihr müsst schnell handeln, um nicht entdeckt zu werden!\")\n",
+        "        # Hier könnte man weitere Logik hinzufügen, um das Abenteuer fortzusetzen.\n",
+        "    elif entscheidung == \"2\":\n",
+        "        print(\"\\nDu hast den sicheren Weg gewählt!\")\n",
+        "        print(\"Ihr geht langsam und vorsichtig weiter. Der alte Mann zeigt dir einige versteckte Pfade.\")\n",
+        "        print(\"Nach einer Weile erreicht ihr einen geheimen Ort, wo ihr euch ausruhen könnt.\")\n",
+        "        # Hier könnte man weitere Logik hinzufügen, um das Abenteuer fortzusetzen.\n",
+        "    else:\n",
+        "        print(\"\\nUngültige Eingabe. Bitte wähle 1 oder 2.\")\n",
+        "\n",
+        "# Starte das Abenteuer\n",
+        "abenteuer()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e8Afro-wPp3C",
-        "outputId": "fb69aa26-4ae1-4c69-da26-1ca62ba66fff"
+        "outputId": "c5388e44-4801-43b0-a96b-066ee6223821"
       },
-      "execution_count": 52,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,19 +464,46 @@
             "GAME BEGINS\n",
             "Wähle zunächst einen Charakter: \n",
             "🎭 Erstelle deinen Charakter\n",
-            "Wie heißt dein Held? as\n",
-            "Was ist deine Klasse? asd\n",
-            "Was ist deine Spezies? asd\n",
+            "Wie heißt dein Held? Najat\n",
+            "Was ist deine Klasse? Zauber \n",
+            "Was ist deine Spezies? Zauber Familie\n",
             "Nun beginnt deine Reise...\n",
             "\n",
             "Du stehst vor einer dunklen Höhle. Was tust du?\n",
             "1️⃣ Gehe hinein.\n",
             "2️⃣ Laufe weiter.\n",
-            "Wähle 1 oder 2: 2\n",
-            "Du gehst weiter und findest eine sichere Stelle zum Ausruhen. 🏕️\n",
-            "Oha, hier liegt ein 🔪 Stumpfes Messer rum. Heb es doch auf!\n",
-            "Drücke ENTER, um das aufzuheben\n",
-            "Cool, dein Inventar besteht nun aus: ['🔪 Stumpfes Messer', '⚔️ Rostiges Eisenschwert', '🔪 Stumpfes Messer']\n"
+            "3️⃣Rufe nach Hilfe.\n",
+            "Wähle 1,2 oder 3: 3\n",
+            "Du rufst nach Hilfe.\n",
+            "Nach einer kurzen Weile erscheint ein weiser alter Mann.\n",
+            "Er bietet dir an, dir einen wertvollen Rat zu geben.\n",
+            "Was möchtest du tun?\n",
+            "1️⃣ Höre auf seinen Rat.\n",
+            "2️⃣ Ignoriere ihn und gehe weiter.\n",
+            "3️⃣ Nimm ihn als Komplizen.\n",
+            "Wähle 1, 2 oder 3:3\n",
+            "Der alte Mann sagt: Nimm mich als Komplizen und ich werde dir weiter helfen.\n",
+            "Du nimmst seinen Vorschlag an und kommst so sicher ans Ziel.\n",
+            "Nachdem du den alten Mann als Komplizen angenommen hast, spürst du sofort eine Welle des Vertrauens.\n",
+            "Er lächelt weise und führt dich durch einen geheimen Pfad, der von dichten Bäumen gesäumt ist.\n",
+            "„Dieser Weg ist sicher, aber wir müssen leise sein“, flüstert er.\n",
+            "\n",
+            "Während ihr geht, erzählt er dir von den Herausforderungen, die vor euch liegen.\n",
+            "„Es gibt Wächter, die diesen Ort beschützen. Sie sind nicht leicht zu überlisten, aber ich kenne einige Tricks“, sagt er und zwinkert dir zu.\n",
+            "\n",
+            "Plötzlich hört ihr ein Geräusch. Der alte Mann zieht dich hinter einen Baum und sagt:\n",
+            "„Bleib ruhig. Wir müssen abwarten, bis die Wächter vorbeigehen.“\n",
+            "Du spürst das Adrenalin in deinen Adern, während ihr beide in der Dunkelheit lauert.\n",
+            "\n",
+            "Nachdem die Wächter vorbeigezogen sind, führt dich der alte Mann weiter.\n",
+            "„Wir sind fast da“, sagt er. „Aber bevor wir das Ziel erreichen, musst du eine Entscheidung treffen.\n",
+            "Es gibt zwei Wege: Der eine führt direkt zum Schatz, aber er ist voller Gefahren.\n",
+            "Der andere ist sicherer, aber er könnte länger dauern.“\n",
+            "Wähle deinen Weg (1 für den riskanten Weg, 2 für den sicheren Weg): 2\n",
+            "\n",
+            "Du hast den sicheren Weg gewählt!\n",
+            "Ihr geht langsam und vorsichtig weiter. Der alte Mann zeigt dir einige versteckte Pfade.\n",
+            "Nach einer Weile erreicht ihr einen geheimen Ort, wo ihr euch ausruhen könnt.\n"
           ]
         }
       ]
